--- a/contact.html
+++ b/contact.html
@@ -291,7 +291,7 @@
                         <div class="div-input col-13 align-self-center py-2 px-1 border-bottom border-1 border-dark">
                             <i class="far fa-envelope-open text-black ft-13 m-0 me-1 p-0 "></i>
                             <input type="email" placeholder="Email" id="email" name="email" class="ft-13 w-90 m-0 p-0 border-0 no-outline" required>
-                            <p class="warning text-danger fs-6 " id="warning"></p>
+                            <p class="warning text-danger ft-13 m-0 p-0 " id="warning"></p>
                         </div>
 
                         <div class="div-input col-13 align-self-center py-2 px-1 border-bottom border-1 border-dark">
